# zcgl

./: .dockerignore  .editorconfig  .env.example  .env.production.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_SUMMARY_AND_RECOMMENDATIONS.md  BRANCH_MANAGEMENT_QUICK_GUIDE.md  BRANCH_MANAGEMENT_STATUS.md  CHANGELOG.md  CI-FIX-SUMMARY.md  CI_CD_COMPATIBILITY_REPORT.md  CI_FIX_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPREHENSIVE-FIX-PLAN.md  COMPREHENSIVE_TEST_ANALYSIS_REPORT.md  COMPREHENSIVE_TEST_COVERAGE_ANALYSIS.md  COMPREHENSIVE_TEST_COVERAGE_ANALYSIS_REPORT.md  CONTRIBUTING.md  CURRENT-STATUS.md  DEPLOYMENT_GUIDE.md  Dockerfile  EXECUTIVE-SUMMARY.md  FINAL-DELIVERABLE.md  FINAL-REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_TESTING_ACHIEVEMENT_REPORT.md  FINAL_TEST_COVERAGE_IMPROVEMENT_REPORT.md  FINAL_TEST_IMPROVEMENT_IMPLEMENTATION_SUMMARY.md  FRONTEND_PRIORITY_SIMPLIFICATION_REPORT.md  GEMINI.md  GITHUB_SECRETS_SETUP.md  GIT_COMMIT_MESSAGE.md  IFLOW.md  INTEGRATION_REPORT.md  JWT_SECURITY_FIX_REPORT.md  (+66 more)
backend/: .dockerignore  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  API_USAGE.md  BACKUP_IMPLEMENTATION.md  CI_FIX_REPORT.md  CLAUDE.md  CODE_QUALITY_FINAL_REPORT.md  CODE_QUALITY_GUIDE.md  CODE_QUALITY_IMPROVEMENT_REPORT.md  CODE_QUALITY_IMPROVEMENT_REPORT_20251104_090719.json  COVERAGE_ACHIEVEMENT_REPORT.md  COVERAGE_IMPROVEMENT_REPORT.md  Dockerfile  EIGHTEENTH_PHASE_TESTING_ACHIEVEMENTS_SUMMARY.md  EIGHTH_PHASE_TESTING_ACHIEVEMENTS_SUMMARY.md  ELEVENTH_PHASE_TESTING_ACHIEVEMENTS_SUMMARY.md  EXCEL_EXPORT_COMPLETE.md  EXCEL_EXPORT_IMPLEMENTATION.md  EXCEL_IMPORT_GUIDE.md  FIFTEENTH_PHASE_TESTING_ACHIEVEMENTS_SUMMARY.md  FOURTEENTH_PHASE_API_INTEGRATION_TESTING_ANALYSIS.md  FOURTEENTH_PHASE_TESTING_ACHIEVEMENTS_SUMMARY.md  HISTORY_TRACKING_IMPLEMENTATION.md  INTELLIGENT_TESTING_FRAMEWORK_REPORT_20251104_090419.json  MONITORING_ALERTING_SYSTEM_REPORT_20251104_090501.json  NINETEENTH_PHASE_COMPREHENSIVE_SUMMARY_REPORT_20251104_090847.json  NINETEENTH_PHASE_OPTIMIZATION_STRATEGY_20251104_090157.json  NINTH_PHASE_TESTING_ACHIEVEMENTS_SUMMARY.md  ORGANIZATION_TEST_COVERAGE_ANALYSIS.md  PDF_IMPORT_COMPARISON_REPORT.md  PDF_IMPORT_DIAGNOSIS_REPORT.md  PDF_IMPORT_FIX_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT_20251104_090248.json  PHASE3_OPTIMIZATION_REPORT.md  README.md  REFACTORING_PLAN.md  (+149 more)
backend/.benchmarks/: ocr_benchmark_result.json
backend/.claude/: ralph-loop.local.md
backend/.github/workflows/: code-quality-monitor.yml
backend/alembic/: env.py
backend/archive/: e712_fix_summary.md  start_redis.bat  start_uv.bat
backend/config/: backend.env.secure  config.example.yaml  create_admin_user.sql  pytest_ultra_optimized.ini  quality_monitor_config.yaml
backend/dev-tools/: README.md
backend/docs/: API_DOCUMENTATION_ANALYSIS.json  API_DOCUMENTATION_ANALYSIS.md  BREAKING_CHANGES.md  COVERAGE_IMPROVEMENT_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  PDF_IMPORT_COMPLETE.md  PDF_IMPORT_REFACTORING.md  PDF_IMPORT_VERIFICATION.md  PR23_FIX_REPORT.md  PR24_REVIEW_FIXES.md  code_quality_extended_guide.md  deployment_operations_guide.md  enhanced_database_guide.md  monitoring_api_guide.md  new_api_endpoints.md
backend/migrations/: 001_add_authentication_tables.sql  001_add_new_asset_fields.sql  002_add_rbac_tables.sql  002_add_rent_management_indexes.sql  003_add_tenant_contact_field.sql  004_add_password_security_fields.sql  README.md  add_performance_indexes.sql  cleanup_redundant_fields.py  fix_data_model_inconsistency.py  migrate_relationships.py  migrate_relationships_fixed.py
backend/reports/: quality_check_20251024_170300.txt  quality_check_20251024_172954.txt  quality_check_20251024_173409.txt
backend/requirements/: security.txt
backend/scripts/: api_consistency_check.py  api_tools.py  apply_indexes.py  asset_optimization_migration.py  auto_fix_tests.py  benchmark_database_performance.py  benchmark_task_queue.py  check_exception_handling.py  check_migrations.py  code_quality_monitor.py  data_migration_tool.py  fix_dictionary_encoding.py  fix_dictionary_labels.py  generate-secrets.sh  generate_openapi.py  generate_system_docs.py  health_monitor.py  init_dictionaries_simple.py  migrate_config.py  migrate_dictionaries.py  optimize_database_indexes.py  optimize_tests.py  performance_optimizer.py  recreate_dictionaries.py  restore_tests.py  security_config_validator.py  seed_property_cert_prompts.py  setup_postgresql.py  setup_spacy_models.py  sql_security_checker.py  test_deepseek_direct.py  test_deepseek_ocr.py  test_deepseek_vl2.py  test_hunyuan_extract.py  test_local_paddleocr.py  test_multipage_extract.py  test_qwen_extract.py  test_wecom.py  test_zhipu_extract.py  update_dictionary_categories.py  (+6 more)
backend/src/: __init__.py  config_simple.py  database.py  database_security.py  database_simple.py  database_url.py  exceptions.py  init_data.py  main.py  main_bilingual.py  main_simple.py
backend/templates/: code_quality_report.md
backend/test-data/: README.md
backend/tests/: .env.test  README_TEST_ORGANIZATION.md  UNIT_TEST_FIX_GUIDE.md  __init__.py  check_paddle_init.py  conftest.py  conftest_performance.py  conftest_skip.py  final_ocr_test.py  manual_test_async_vision.py  manual_test_llm_extractor.py  mock_services.py  ocr_basic_test.py  ocr_scan_optimization.py  optimize_tests.py  performance_benchmark.py  performance_benchmark_pdf_processing.py  simple_ocr_test.py  simple_test_optimizer.py  test_advanced_search.py  test_api.py  test_async_vision.py  test_backup.py  test_coverage_suite.py  test_database.py  test_debug_compare.py  test_enhanced_database_coverage.py  test_enum_field.py  test_excel_export.py  test_excel_import.py  test_history_tracker.py  test_main.py  test_occupancy_calculator.py  test_organization_management.py  test_schemas.py  test_single_image.py  test_statistics.py  verify_full_pipeline.py  verify_llm_real.py  verify_pdf_import.py  (+1 more)
backend/tools/: api_documentation_analyzer.py  api_documentation_analyzer_simple.py
(+3188 files in other folders)
