[project]
name = "land-property-management"
version = "0.1.0"
description = "土地物业资产管理系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.1.0",
    "polars>=0.20.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "pandas>=2.0.0",
    "redis>=7.0.0",
    "aioredis>=2.0.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.0.0",
    # 基础NLP工具
    "jieba>=0.42.1",
    "regex>=2023.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.1",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "pillow>=12.0.0",
    # PDF基础处理
    "pymupdf>=1.24.14",
    "pdfplumber>=0.11.7",
    "pdf2image>=1.17.0",
    # OCR重型依赖已移动到 [pdf-ocr] 可选依赖组
    # 安装OCR功能: uv sync --extra pdf-ocr
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.3.0",
    "bandit>=1.8.6",
    "radon>=6.0.1",
    "safety>=3.6.2",
]

# PDF基础处理功能（轻量级）
pdf-basic = [
    "pdfplumber>=0.11.0,<0.12.0",
    "pymupdf>=1.24.5,<1.25.0",
    "markitdown>=0.1.0",
    "python-magic>=0.4.27; sys_platform != 'linux'",
    "python-magic-bin>=0.4.14; sys_platform != 'linux'",
]

# PDF OCR功能（重量级，需GPU或大内存）
pdf-ocr = [
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "opencv-python>=4.12.0.88",
    "paddlepaddle>=3.2.0",
    "paddleocr>=3.3.0",
]

# NLP增强功能（中等重量级）
nlp = [
    "spacy>=3.6.0",
]

# 文档生成功能
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-macros-plugin>=1.4.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "pymdown-extensions>=10.16.1",
]

# 本地 LLM 推理（ChatGLM3）- 极大内存占用
llm-local = [
    "transformers>=4.43.3",
    "huggingface_hub>=0.23.0",
    "accelerate>=0.34.0",
    "safetensors>=0.4.4",
    "sentencepiece>=0.1.99",
]

# 完整功能（所有可选依赖）
all = [
    "land-property-management[dev,pdf-basic,pdf-ocr,nlp,docs,llm-local]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E402", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
# 渐进式类型检查策略：核心代码严格，边缘代码宽松
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Phase 1: 渐进式启用
check_untyped_defs = true
warn_unused_ignores = false  # Phase 2: 启用

# 启用 PEP 695 新类型参数语法 (Python 3.12+)
enable_incomplete_feature = ["NewGenericSyntax"]

# 忽略第三方库的类型错误
ignore_missing_imports = true

# === Tier 0: 核心基础设施 (STRICT) ===
# 数据库、认证、配置、模型、Schema
[[tool.mypy.overrides]]
module = [
    "src.database",
    "src.core.security",
    "src.core.config",
    "src.core.jwt_security",
    "src.models.*",
    "src.schemas.*",
]
# Phase 0: 立即启用严格模式
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true

# === Tier 1: 核心业务逻辑 (STANDARD) ===
# API 端点、服务层、CRUD
[[tool.mypy.overrides]]
module = [
    "src.api.v1.*",
    "src.services.asset.*",
    "src.services.core.*",
    "src.services.rent_contract.*",
    "src.services.ownership.*",
    "src.services.project.*",
    "src.crud.*",
]
# Phase 1: 逐步启用（当前允许未类型定义）
disallow_untyped_defs = false  # Week 2-5: 逐步修复后启用
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

# === Tier 2: 边缘工具 (BASIC) ===
# Utils、Middleware、Validation
[[tool.mypy.overrides]]
module = [
    "src.utils.*",
    "src.middleware.*",
    "src.validation.*",
]
# Removed: warn_unused_configs (not allowed in per-module overrides)
# Removed: warn_redundant_casts (not allowed in per-module overrides)
# Removed: warn_unused_ignores (not allowed in per-module overrides)

# === Tier 3: 第三方集成 (PERMISSIVE) ===
# OCR、PDF、文档处理服务
[[tool.mypy.overrides]]
module = [
    "src.services.document.*",
    "src.services.excel.*",
]
ignore_missing_imports = true
# 允许策略化使用 # type: ignore
warn_return_any = false
disable_error_code = ["no-untyped-def", "no-any-return"]

# === 无类型第三方库的显式忽略 ===
[[tool.mypy.overrides]]
module = [
    "paddleocr.*",
    "fitz.*",
    "pymupdf.*",
    "pdfplumber.*",
    "jieba.*",
    "fuzzywuzzy.*",
    "Levenshtein.*",
    "tenacity.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short --disable-warnings -ra --import-mode=importlib --cov=src --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml:coverage.xml --cov-report=json:coverage.json --cov-fail-under=70 --junitxml=junit-report.xml"
norecursedirs = ["archive", "*.egg-info", ".git", ".tox", "dist", "build", "node_modules", "__pycache__", ".pytest_cache"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "unit: Unit tests - single function or class",
    "integration: Integration tests - module collaboration",
    "e2e: End-to-end tests - complete workflow",
    "slow: Slow running tests (execution time > 10s)",
    "database: Database tests - requires database connection",
    "api: API tests - API endpoint testing",
    "ocr: OCR tests - OCR functionality",
    "pdf: PDF processing tests",
    "rbac: RBAC tests - permission functionality",
    "security: Security tests - vulnerability and penetration testing",
    "performance: Performance tests - load and stress testing",
    "load: Load tests - high volume and sustained load testing",
    "stress: Stress tests - maximum capacity and pressure testing",
    "core: Core functionality tests",
    "asyncio: Async tests"
]
minversion = "7.4"
timeout = 300
timeout_method = "thread"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "*/archive/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod"
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
